mission details page

--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
@@ -20,7 +20,7 @@
 <!-- selected filters div ends here -->
 <!-- Heading of page -->
 <div class="container justify-content-between d-flex mt-4">
-    <h2>Explore Missions</h2>
+    <h2 id="total-records">Explore Missions</h2>
     <div class="d-none d-md-flex justify-content-start">
         <div class="dropdown mx-4 " >
             <div class="dropdown-toggle h-auto mt-3" href="#" role="button" data-bs-toggle="dropdown"
@@ -61,11 +61,12 @@
 </div>*@
 <!-- Card ends for ListView -->
 <!-- Pagination starts here -->
-<nav>
+<nav id="  pagination-container">
+
     <ul class="pagination  d-flex justify-content-center flex-wrap pagination-flat pagination-success">
         <li class="page-item me-2"><a class="page-link" href="#" data-abc="true"><img src="~/images/previous.png" /></a></li>
         <li class="page-item me-2"><a class="page-link" href="#" data-abc="true"><img src="~/images/left.png" /></a></li>
-        <li class="page-item me-2 active"><a class="page-link" href="#" data-abc="true">1</a></li>
+        <li class="page-item me-2 "><a class="page-link" href="#" data-abc="true">1</a></li>
         <li class="page-item me-2"><a class="page-link" href="#" data-abc="true">2</a></li>
         <li class="page-item me-2"><a class="page-link" href="#" data-abc="true">3</a></li>
         <li class="page-item me-2"><a class="page-link" href="#" data-abc="true">4</a></li>
