mission detail page

--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
@@ -1,4 +1,4 @@
-﻿@using System.Linq;
+﻿@*@using System.Linq;*@
 @{
    
     Layout = "_Layout";
@@ -51,7 +51,9 @@
 
 @*<div class="container my-5" id="grid-view">*@
  @*  <partial name="_GridView" ></partial>*@
+
 <div class="partialViews"></div>
+
 
 @*</div>*@
 <!-- Card end for GridView -->
