--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_ListView.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_ListView.cshtml
@@ -1,4 +1,4 @@
-﻿@model CI_Platform.Entities.ViewModels.MissionListModel
+﻿@model CI_Platform.Entities.ViewModels.MissionListViewModel
 
 
 @foreach (var obj in Model.DisplayMissionCardsDemo)
