--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
@@ -5,7 +5,7 @@
     //var ThemeList = ViewBag.ThemeList;
 
 }
-@model CI_Platform.Entities.ViewModels.MissionListModel
+@*@model CI_Platform.Entities.ViewModels.MissionListModel*@
 
 
 <!-- search Nav bar starts here -->
