--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/HomePage.cshtml
@@ -8,7 +8,7 @@
     //DateTime StartDate = MissionList.StartDate.GetDate();
     //var Stars = .MissionList.MissionRatings.Rating.ToInt32();
 }
-@model CI_Platform.Entities.ViewModels.MissionListModel
+@model CI_Platform.Entities.ViewModels.MissionListViewModel
 
 
 
