--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_GridView.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_GridView.cshtml
@@ -2,7 +2,7 @@
 @*@{
     var goaltext = model.missiondetail.goalmissions.goalobjectivetext;
 }*@
-@model CI_Platform.Entities.ViewModels.MissionListModel
+@model CI_Platform.Entities.ViewModels.MissionListViewModel
 
 
 <div class=" row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-sm-1   g-4">
