--- a/mvc/CI-Platform/CI-Platform-web/Views/Auth/Register.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Auth/Register.cshtml
@@ -51,7 +51,7 @@
         </div>
     </div>
 </div>
-@*<script>
+<script>
     var check = function () {
         if (document.getElementById('Password').value == document.getElementById('ConfirmPassword').value) {
             document.getElementById('cnf-msg').style.display = 'none';
@@ -62,4 +62,4 @@
             document.getElementById('cnf-msg').innerHTML = 'Password and Confirm Password must be same!!';
         }
     }
-</script>*@
+</script>
