--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
@@ -19,7 +19,7 @@
             <input type="search" placeholder="Search mission... " aria-label="Search">
         </form>*@
         <input style="width:18rem" type="text" class="form-control border-none" placeholder="Search mission..." aria-label="Search"
-               aria-describedby="seacrhIcon" id="search" onkeyup="FilterSortPaginationSearch()">
+               aria-describedby="searchIcon" id="searchText"  >
     </div>
 
     <div class=" flex-row d-none d-md-flex">
