--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_StoryListingPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_StoryListingPartial.cshtml
@@ -1,15 +1,37 @@
-﻿ <!-- Card start for GridView -->
+﻿@model CI_Platform.Entities.ViewModels.StoryListingViewModel 
+
+<!-- Card start for GridView -->
     <div class="container my-5">
         <div class=" row row-cols-md-2 row-cols-lg-3 row-cols-sm-1 g-4">
             <!-- Card starts from col -->
             @foreach(var obj in Model.DisplayStoryCard)
             {
+
+            var story_id = obj.StoryId;
             <div class="col">
                 <div class="card ">
                     <div class="pill-on-img">
                         <div>
-                            <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
-                             class="card-img-top" alt="...">
+                            @*<img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
+                             class="card-img-top" alt="...">*@
+
+                            @foreach (var img_mission in obj.StoryMedia)
+                            {
+                               @* @if(img_mission.Path == null)
+                                {
+                                    <img src="~/images/no-image-icon-21.png" class="card-img-top">
+                                }
+                                else
+                                {*@
+                                    <img src=@img_mission.Path class="card-img-top">
+
+                              @*  }*@
+                                
+                            }
+
+
+                           
+
                             <div class="btn-share-story rounded-pill d-none">View Details</div>
                         </div>
                         <div class="theme-pill rounded-pill"> @obj.Mission.MissionTheme.Title  </div>
@@ -18,7 +40,12 @@
                         <h3 class="card-title">@obj.Title</h3>
                         <p class="card-text align-items-center">@obj.Description</p>
                         <div class="d-flex">
-                                <img class="rounded-circle story-card-icon" src="~/images/volunteer2.png" />
+
+                           @* @foreach(var user_img in (dynamic) obj.User)
+                            {
+                                <img class="rounded-circle story-card-icon" src= @user_img.  />
+                            }*@
+                            
                                 <div class="story-card-icon-detail">
                                 <p>@obj.User.FirstName @obj.User.LastName</p>
                                 </div>
@@ -27,53 +54,7 @@
                 </div>
             </div>
             }
-                <!-- card 1 ends here and card 2 starts -->
-@*            <div class="col">
-                <div class="card ">
-                    <div class="pill-on-img">
-                        <div>
-                            <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
-                                 class="card-img-top" alt="...">
-                            <div class="btn-share-story rounded-pill d-none">View Details</div>
-                        </div>
-                        <div class="theme-pill rounded-pill"> Environment </div>
-                    </div>
-                    <div class="card-body">
-                        <h3 class="card-title">Grow Trees On the path to environment sustainability</h3>
-                        <p class="card-text align-items-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</p>
-                        <div class="d-flex">
-                            <img class="rounded-circle story-card-icon" src="~/images/volunteer2.png" />
-                            <div class="story-card-icon-detail">
-                                <p>Andrew Johnson</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>*@
-                <!-- card 2 ends here and card 3 starts -->
-            @*<div class="col">
-                <div class="card ">
-                    <div class="pill-on-img">
-                        <div>
-                            <img src="~/images/Grow-Trees-On-the-path-to-environment-sustainability-1.png"
-                                 class="card-img-top" alt="...">
-                            <div class="btn-share-story rounded-pill d-none">View Details</div>
-                        </div>
-                        <div class="theme-pill rounded-pill"> Environment </div>
-                    </div>
-                    <div class="card-body">
-                        <h3 class="card-title">Grow Trees On the path to environment sustainability</h3>
-                        <p class="card-text align-items-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore...</p>
-                        <div class="d-flex">
-                            <img class="rounded-circle story-card-icon" src="~/images/volunteer2.png" />
-                            <div class="story-card-icon-detail">
-                                <p>Andrew Johnson</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>*@
-                <!-- card 3 ends here and card 4 starts -->
+ @*           card ends here*@
             </div>
         </div>
         <!-- Card end for GridView -->
