--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/AuthStyle.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/AuthStyle.css
@@ -4,6 +4,12 @@
     font-family: 'NotoSans';
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 h2, small, p, a, button, small, form {
     font-family: 'NotoSans';
 }
