--- a/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
+++ b/mvc/CI-Platform/CI-Platform-web/wwwroot/css/HomePage.css
@@ -308,6 +308,26 @@ a,li,button,h3 {
         flex-direction: column;
     }
 
+.pagination li {
+    margin: 10px 5px;
+}
+
+    .pagination li a {
+        padding: 5px 11px;
+        cursor: pointer;
+        text-decoration: none;
+        border-radius: 4px;
+        color: #414141;
+        border: 1px solid #d0d0d0;
+        /*padding-bottom: 8px;*/
+    }
+
+.pagination .active a {
+    color: #fff;
+    background-color: #F88634 !important;
+    border-color: #F88634 !important;
+}
+
 
 .footer {
     text-decoration: none;
