--- a/mvc/CI-Platform/CI-Platform-web/Views/Story/StoryListing.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Story/StoryListing.cshtml
@@ -25,4 +25,14 @@
     </div>
 
     <div class="StorypartialViews"></div>
+
+    <center>
+
+        <div class="container">
+            <nav aria-label="Page navigation example" class="pagination justify-content-center">
+                <ul class="pagination" id="pagination-container">
+                </ul>
+            </nav>
+        </div>
+    </center>
 </div>
